# Micro-Projet-JIN4526

./: .gitignore  BrainStorm.txt  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  Event.cpp  Event.h  Food.h  Game.cpp  Game.h  Manpower.cpp  Manpower.h  Materials.h  Peasent.h  Peasents.cpp  Peasents.h  Resources.h  Soldier.h  Soldiers.cpp  Soldiers.h
src/main/: CMakeLists.txt  Main.cpp
src/resources/: EventList.txt  init.xml
src/test/: CMakeLists.txt  UnitTestFood.cpp  UnitTestPeasents.cpp  UnitTestSoldiers.cpp
